Fixed FAQ dark mode colors

--- a/website.css
+++ b/website.css
@@ -143,6 +143,11 @@ hr {
     --line-height: 1.7;
     --box-shadow: 0 5px 10px -3px #00000044;
     --thin-border: solid 1px var(--transparent-black);
+    --teeth-box-fill: #f6fdff;
+    --egg-box-fill: #fff9fc;
+    --item-box-fill: #fdfffa;
+    --mutation-box-fill: #f7fff7;
+    --pet-box-fill: #fffbf6;
 }
 
 
@@ -171,6 +176,11 @@ hr {
     --bg-image-gradient: url(images/Gradient_Wjust_Nav_DarkMode.png);
     --transparent-black: var(--light-green);
     --thin-border: solid 1px var(--light-green);
+    --teeth-box-fill: hsl(219, 28%, 41%);
+    --egg-box-fill: hsl(230, 28%, 41%);
+    --item-box-fill: hsl(194, 28%, 41%);
+    --mutation-box-fill: hsl(163, 10%, 41%);
+    --pet-box-fill: hsl(60, 10%, 41%);
 }
 
 .dark-mode a.link {
